ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: services-ingress
  namespace: default

spec:
  rules:
    - host: services.com

      http:
        paths:
          - path: "/1"
            pathType: Prefix
            backend:
              service:
                name: service1
                port:
                  number: 3210

          - path: "/2"
            pathType: Prefix
            backend:
              service:
                name: service2
                port:
                  number: 4321
